WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 95638
[Qt] REGRESSION(
r127321
): It made 3 notification test timeout
https://bugs.webkit.org/show_bug.cgi?id=95638
Summary
[Qt] REGRESSION(r127321): It made 3 notification test timeout
Csaba Osztrogonác
Reported
2012-09-01 00:36:46 PDT
Could you check what happened? --- /ramdisk/qt-linux-64-release/build/layout-test-results/fast/notifications/notifications-display-close-events-expected.txt +++ /ramdisk/qt-linux-64-release/build/layout-test-results/fast/notifications/notifications-display-close-events-actual.txt @@ -1,7 +1,5 @@ DESKTOP NOTIFICATION: icon , title New E-mail, text Meet me tonight at 8! -DESKTOP NOTIFICATION CLOSED: New E-mail +FAIL: Timed out waiting for notifyDone to be called Sending notifications with permission... -PASS: display event invoked. -PASS: close event invoked. --- /ramdisk/qt-linux-64-release/build/layout-test-results/fast/notifications/notifications-double-show-expected.txt +++ /ramdisk/qt-linux-64-release/build/layout-test-results/fast/notifications/notifications-double-show-actual.txt @@ -1,4 +1,5 @@ DESKTOP NOTIFICATION: icon
http://0.0.0.0/my_icon.png
, title New E-mail, text Meet me tonight at 8! +FAIL: Timed out waiting for notifyDone to be called Sending notifications... --- /ramdisk/qt-linux-64-release/build/layout-test-results/fast/notifications/notifications-with-permission-expected.txt +++ /ramdisk/qt-linux-64-release/build/layout-test-results/fast/notifications/notifications-with-permission-actual.txt @@ -1,5 +1,6 @@ DESKTOP NOTIFICATION: contents at
http://0.0.0.0/my_notification.html
DESKTOP NOTIFICATION: icon
http://0.0.0.0/my_icon.png
, title New E-mail, text Meet me tonight at 8! +FAIL: Timed out waiting for notifyDone to be called Sending notifications with permission...
Attachments
Proposed patch
(609 bytes, patch)
2012-09-01 13:23 PDT
,
Jon Lee
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Lee
Comment 1
2012-09-01 13:22:45 PDT
That patch aliases "display" for "show". So I think you just need to dispatch the "show" event instead. Posted a patch; not sure if it will get run by EWS-- might be worth trying it on your end?
Jon Lee
Comment 2
2012-09-01 13:23:30 PDT
Created
attachment 161833
[details]
Proposed patch
Csaba Osztrogonác
Comment 3
2012-09-03 00:10:31 PDT
(In reply to
comment #2
)
> Created an attachment (id=161833) [details] > Proposed patch
Thanks for the fix, I tried it and it works for me. (EWS doesn't run tests, only the Chromium EWS does it.) Could you upload it with changelog, please?
Csaba Osztrogonác
Comment 4
2012-09-04 02:20:04 PDT
Fix landed in
https://trac.webkit.org/changeset/127450
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug