[Qt] REGRESSION(r127321): It made 3 notification test timeout https://bugs.webkit.org/show_bug.cgi?id=95638

Patch by Jon Lee <jonlee@apple.com> on 2012-09-04
Reviewed by Csaba Osztrogonác.

Dispatch show event instead of display after r127321.

* WebCoreSupport/NotificationPresenterClientQt.cpp:
(WebCore::NotificationPresenterClientQt::sendDisplayEvent):

Canonical link: https://commits.webkit.org/113604@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127450 268f45cc-cd09-0410-ab3c-d52691b4dbfc